--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ h1 {
 
 .box {
     flex: 1;
-    border: 1px solid #000;
     padding: 10px;
     text-align: left;
 }
@@ -48,8 +47,16 @@ input {
     color: green;
 }
 
+.green_bg {
+    background-color: rgba(0, 128, 0, 0.1);
+}
+
 .red {
     color: red;
+}
+
+.red_bg {
+    background-color: rgba(255, 0, 0, 0.1);
 }
 
 .blue {
@@ -65,7 +72,7 @@ input {
 }
 
 .suggestedText {
-    font-size: 18px;    
+    font-size: 18px;
     margin-right: 10px;
 }
 
